Nav gap issue

--- a/src/components/SearchForm/SearchForm.scss
+++ b/src/components/SearchForm/SearchForm.scss
@@ -2,6 +2,7 @@
   position: fixed;
   left: 0;
   right: 0;
+  bottom: 0;
   margin: auto;
   width: 100%;
   max-width: 500px;
